--- a/index.html
+++ b/index.html
@@ -1,25 +1,36 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="pt-br">
+
+<head>
+    <link rel="stylesheet" href="style.css">
+    <title>Vinicios Pedreiro</title>
+</head>
 
 <body>
 
 
-<header>Vinicios Pedreiro</header>
-<h1><em>Vinicios Pedreiro</em></h1>
-<p<h>Contratando serventes para obra em Carapicuibá.</p>
-    <p> <strong>Requisitos</strong></p>
-    <p>ser cuiudo,</p>
-    <p>não homossexual, </p>
-    <p>não possuir doença sexual "opcional", </p>
-    <p>mecher com as mulheres que passarem na rua, </p>
-    <p>e frequentar a casa das primas.Caso se encaixe nesses requisitos venha me procurar na praça charutão de carne.
-    </p>
+    <header>Vinicios Pedreiro</header>
 
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/jmBKzlG5s-4?si=kLrnUrJZKFR8y4JI"
-        title="YouTube video player" frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <div>
 
-        </body>
+    <h1><em>Vinicios Pedreiro</em></h1>
+    <p<h>Contratando serventes para obra em Carapicuibá.</p>
+        <p> <strong>Requisitos</strong></p>
+        <p>ser cuiudo,</p>
+        <p>não homossexual, </p>
+        <p>não possuir doença sexual "opcional", </p>
+        <p>mecher com as mulheres que passarem na rua, </p>
+        <p>e frequentar a casa das primas.Caso se encaixe nesses requisitos venha me procurar na praça charutão de
+            carne. #TimMaiaPresidente</p>
+
+        </div>
+
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/5abamRO41fE?si=hFmkgv7tqU8DeOlS"
+            title="YouTube video player" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+</body>
+
 </html>
