--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
 
     <header>Vinicios Pedreiro</header>
+<section>
+
 
     <div>
 
@@ -31,6 +33,7 @@
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
+            </section>
 </body>
 
 </html>
