--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 
 <head>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Sunuwar&display=swap" rel="stylesheet">
     <title>Vinicios Pedreiro</title>
 </head>
 
@@ -11,20 +14,20 @@
 
 
     <header>Vinicios Pedreiro</header>
-<section>
+    <section>
 
 
-    <div>
+        <div>
 
-    <h1><em>Vinicios Pedreiro</em></h1>
-    <p<h>Contratando serventes para obra em Carapicuibá.</p>
-        <p> <strong>Requisitos</strong></p>
-        <p>ser cuiudo,</p>
-        <p>não homossexual, </p>
-        <p>não possuir doença sexual "opcional", </p>
-        <p>mecher com as mulheres que passarem na rua, </p>
-        <p>e frequentar a casa das primas.Caso se encaixe nesses requisitos venha me procurar na praça charutão de
-            carne. #TimMaiaPresidente</p>
+            <h1><em>Vinicios Pedreiro</em></h1>
+            <p<h>Contratando serventes para obra em Carapicuibá.</p>
+                <p> <strong>Requisitos</strong></p>
+                <p>ser cuiudo,</p>
+                <p>não homossexual, </p>
+                <p>não possuir doença sexual "opcional", </p>
+                <p>mecher com as mulheres que passarem na rua, </p>
+                <p>frequentar a casa das primas.Caso se encaixe nesses requisitos venha na praça charutão de
+                    carne. #TimMaiaPresidente</p>
 
         </div>
 
@@ -33,7 +36,7 @@
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
-            </section>
+    </section>
 </body>
 
 </html>
