--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Sunuwar&display=swap" rel="stylesheet">
     <title>Vinicios Pedreiro</title>
+
 </head>
 
 <body>
@@ -35,6 +36,10 @@
             title="YouTube video player" frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+            </section>
+            <section>
+            <h2>Ronaldo, e brilha muito no curintia</h2>
 
     </section>
 </body>
